# llm-sheet-analysis

./: Cargo.toml  README.md  readme.md
src/: config.rs  error.rs  logging.rs  main.rs  models.rs
src/routes/: mod.rs  sheets.rs
src/services/: db_loader.rs  file_processor.rs  llm_agent.rs  mod.rs
src/services/excel/: analyzer.rs  mod.rs  processor.rs  types.rs  utils.rs
