[package]
name = "sheet_services"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "time"] }

# Web Framework
axum = { version = "0.7", features = ["http1", "macros"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["server"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"
lru = "0.12"
# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Data Processing
polars = { version = "0.37", features = ["lazy"] }
calamine = "0.24"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
tokio-rusqlite = "0.4"
moka = { version = "0.12", features = ["sync"] }  # Changed from future to sync
parking_lot = "0.12"



regex = "1.10"

chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
rayon = "1.8"
once_cell = "1.18"
async-openai = "0.18.1"
bytes = "1.5"
smallvec = "1.11"
futures = "0.3"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"